:sparkles: feat: create comments in the postController to generate swagger.js correct
