# src/controllers/postController.js
@@ -8,6 +8,9 @@ const getAllPosts = async (_req, res) => {
 
 const getPostById = async (req, res) => {
   // #swagger.tags = ['Post']
+  /* #swagger.responses[200] = {
+            description: 'Ok',
+    } */
   const { id } = req.params;
   const { status, message, currentPost } = await postService.getPostById(id);
   if (message) return res.status(status).json({ message });
@@ -19,10 +22,24 @@ const getByTerm = async (req, res) => {
   const { q } = req.query;
   const likePost = await postService.getByTerm(q);
   return res.status(200).json(likePost);
- };
+};
 
 const createPost = async (req, res) => {
   // #swagger.tags = ['Post']
+  /*  #swagger.parameters['obj'] = {
+      in: 'body',
+      description: 'You need to enter a valid post',
+      schema: {
+          $title: 'Latest updates, August 1st',
+          $content: 'The whole text for the blog post goes here in this key',
+          $categoryIds: [1, 2],
+      }
+} */
+
+  /* #swagger.responses[400] = {
+        description: `Some required fields are missing
+        <hr>One or more "categoryIds" not found`,
+} */
   const post = req.body;
   const postCreated = await postService.createPost(post);
   return res.status(201).json(postCreated);
@@ -30,6 +47,22 @@ const createPost = async (req, res) => {
 
 const updatePost = async (req, res) => {
   // #swagger.tags = ['Post']
+  /*  #swagger.parameters['obj'] = {
+    in: 'body',
+    description: 'You need to enter a valid post',
+    schema: {
+        $title: 'Latest updates, August 1st',
+        $content: 'The whole text for the blog post goes here in this key',
+    }
+} */
+
+  /* #swagger.responses[200] = {
+        description: `Updated`,
+} */
+
+  /* #swagger.responses[400] = {
+        description: `Some required fields are missing`,
+} */
   const { id } = req.params;
   const { body } = req;
   const { status, message, updatedPost } = await postService.updatePost(id, body);
@@ -39,6 +72,9 @@ const updatePost = async (req, res) => {
 
 const removePost = async (req, res) => {
   // #swagger.tags = ['Post']
+    /* #swagger.responses[200] = {
+        description: `Deleted - without response body`,
+} */
   const { id } = req.params;
   const removedPost = await postService.removePost(id);
   return res.status(204).json(removedPost);
